--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-requests==2.32.3
-playwright==1.57.0
-playwright-stealth==2.0.0
 fastmcp==2.14.2
+playwright==1.57.0
+playwright_stealth==2.0.0
+pydantic==2.12.5
+Requests==2.32.5
